--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-router-dom": "^6.16.0",
     "react-slick": "^0.29.0",
     "react-slideshow-image": "^4.2.1",
